--- a/Appli Mobile/GSB-FicheFrais/GSB-FicheFrais.csproj
+++ b/Appli Mobile/GSB-FicheFrais/GSB-FicheFrais.csproj
@@ -63,6 +63,10 @@
       <HintPath>..\packages\Spring.Rest.1.1.1\lib\sl4-wp71\Spring.Rest.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Threading.Tasks.WP71, Version=3.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Unofficial.3.1\lib\sl4-wp71\System.Threading.Tasks.WP71.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -74,14 +78,24 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ClasseGen\FicheDeFraisTemplate.cs" />
     <Compile Include="Fiche.xaml.cs">
       <DependentUpon>Fiche.xaml</DependentUpon>
     </Compile>
-    <Compile Include="LoginResult.cs" />
+    <Compile Include="FichedeFrais.xaml.cs">
+      <DependentUpon>FichedeFrais.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ClasseDeDesirialization\EtatResult.cs" />
+    <Compile Include="ClasseDeDesirialization\FicheResults.cs" />
+    <Compile Include="ClasseDeDesirialization\GetUserResult.cs" />
+    <Compile Include="ClasseDeDesirialization\HorsForfaitResult.cs" />
+    <Compile Include="ClasseDeDesirialization\LigneForfaitResult.cs" />
+    <Compile Include="ClasseDeDesirialization\LoginResult.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ClasseDeDesirialization\TypeForfaitResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -89,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="Fiche.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FichedeFrais.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,13 +125,15 @@
     <Content Include="ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="App_Readme\Spring.Rest.txt" />
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="LogoGrand.png" />
+    <Content Include="Images\archive44.png" />
+    <Content Include="Images\write15.png" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
