--- a/Appli Mobile/GSB-FicheFrais/packages.config
+++ b/Appli Mobile/GSB-FicheFrais/packages.config
@@ -5,4 +5,6 @@
   <package id="RestSharp" version="104.0" targetFramework="wp71" />
   <package id="RestSharpSigned" version="105.1.0" targetFramework="wp71" />
   <package id="Spring.Rest" version="1.1.1" targetFramework="wp71" />
+  <package id="System.Threading.Tasks" version="3.1.1" targetFramework="wp71" />
+  <package id="System.Threading.Tasks.Unofficial" version="3.1" targetFramework="wp71" />
 </packages>
